# HyTES-Cal-Val-Model

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: real_data.example.yml
docs/: calval_thermal_greeks_bridge.md  data_dictionary.md  real_data_and_copilot_workflow.md  wilson_2013_specification.md
examples/: build_real_matchups.py  compare_with_copilot.py  demo_thermal_greeks.py
outputs/: README.md
src/hytes_calval/: __init__.py  cli.py
src/hytes_calval/compare/: __init__.py  copilot.py
src/hytes_calval/ingestion/: __init__.py  real_data.py
src/hytes_calval/physics/: __init__.py  radiometry.py  thermal_greeks.py  units.py  wilson2013.py
src/hytes_calval/stochastic/: __init__.py  kalman.py
src/hytes_calval/synthetic/: __init__.py  skin_temperature.py
src/hytes_calval/validation/: __init__.py  metrics.py  residual_model.py
tests/: test_copilot_compare.py  test_radiometry.py  test_real_data_ingestion.py  test_thermal_greeks_pipeline.py  test_units.py
