[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hytes-cal-val-model"
version = "0.2.0"
description = "Physics-first HyTES Lake Tahoe calibration and validation with thermal-Greek sensitivity diagnostics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.13",
  "matplotlib>=3.9",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
  "pandas-stubs>=2.2",
]
geospatial = [
  "xarray>=2024.1",
  "rioxarray>=0.15",
  "rasterio>=1.3",
  "geopandas>=0.14",
]

[project.scripts]
hytes-calval-demo = "hytes_calval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_return_any = true
ignore_missing_imports = true
